--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.11",
         "yoeunes/toastr": "^2.3",
-        "fakerphp/faker": "^1.9.1",
+        "fakerphp/faker": "^1.9.1"
     },
     "require-dev": {
 
