--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,10 @@
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.11",
-        "yoeunes/toastr": "^2.3",
-        "fakerphp/faker": "^1.9.1"
+        "yoeunes/toastr": "^2.3"
     },
     "require-dev": {
-
+        "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nascent-africa/jetstrap": "^2.5",
