--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
         "hardevine/shoppingcart": "^3.1",
+        "jgrossi/corcel": "^6.0",
         "laravel/framework": "^9.0",
         "laravel/jetstream": "^3.0",
         "laravel/sanctum": "^2.14",
